--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta charset="utf-8" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image" href="./src/image/n_ico.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>PPM2 | PRACOWNIA PROJEKTOWA M KWADRAT MICHAŁ DĄBEK</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@200&amp;display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
