poprawiono zakładkę nagrody oraz pracownia

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image" href="./src/image/n_ico.jpg" />
+    <link rel="icon" type="image" href="src/image/ppm2_ico.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PPM2 | PRACOWNIA PROJEKTOWA M KWADRAT MICHAŁ DĄBEK</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
